@@ -45,23 +45,27 @@ BEGIN
     GROUPBOX        "Popup Options",IDC_STATIC,3,168,310,71
     LTEXT           "Text",IDC_STATIC,60,177,23,8
     LTEXT           "Background",IDC_STATIC,86,177,47,8
-    CTEXT           "Timeout (seconds, 0 = use default)",IDC_STATIC,146,177,125,8
+    CTEXT           "Timeout (seconds, 0 = default, -1 = no timeout)",IDC_STATIC,134,177,168,8
     LTEXT           "Message",IDC_STATIC,11,187,44,13
     CONTROL         "",IDC_COLTEXT_MESSAGE,"ColourPicker",WS_TABSTOP,56,187,24,13
     CONTROL         "",IDC_COLBACK_MESSAGE,"ColourPicker",WS_TABSTOP,92,187,24,13
-    EDITTEXT        IDC_DELAY_MESSAGE,191,185,26,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DELAY_MESSAGE,173,185,46,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_DELAY_MESSAGE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,197,185,9,13
     LTEXT           "URL",IDC_STATIC,11,200,44,13
     CONTROL         "",IDC_COLTEXT_URL,"ColourPicker",WS_TABSTOP,56,199,24,13
     CONTROL         "",IDC_COLBACK_URL,"ColourPicker",WS_TABSTOP,92,199,24,13
-    EDITTEXT        IDC_DELAY_URL,191,198,26,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DELAY_URL,173,198,46,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_DELAY_URL_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,197,198,11,13
     LTEXT           "File",IDC_STATIC,11,213,44,13
     CONTROL         "",IDC_COLTEXT_FILE,"ColourPicker",WS_TABSTOP,56,211,24,13
     CONTROL         "",IDC_COLBACK_FILE,"ColourPicker",WS_TABSTOP,92,211,24,13
-    EDITTEXT        IDC_DELAY_FILE,191,211,26,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DELAY_FILE,173,211,46,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_DELAY_FILE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,201,210,9,13
     LTEXT           "Others",IDC_STATIC,12,226,44,11
     CONTROL         "",IDC_COLTEXT_OTHERS,"ColourPicker",WS_TABSTOP,56,223,24,13
     CONTROL         "",IDC_COLBACK_OTHERS,"ColourPicker",WS_TABSTOP,92,223,24,13
-    EDITTEXT        IDC_DELAY_OTHERS,191,224,26,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_DELAY_OTHERS,173,224,46,12,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_DELAY_OTHERS_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,199,224,11,13
     PUSHBUTTON      "Preview popup",IDC_PREVIEW,226,223,83,12
     CONTROL         "",IDC_EVENTOPTIONS,"SysTreeView32",TVS_HASBUTTONS | TVS_HASLINES | TVS_LINESATROOT | TVS_DISABLEDRAGDROP | TVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP,6,8,294,98
 END
@@ -910,9 +914,9 @@ BEGIN
         MENUITEM "Show Status Bar",             40077
         POPUP "Tool Bar"
         BEGIN
-		MENUITEM "Show Tool Bar",               40078
-		MENUITEM "Place ToolBar at bottom",     40171
-		END
+            MENUITEM "Show Tool Bar",               40078
+            MENUITEM "Place ToolBar at bottom",     40171
+        END
         POPUP "Title Bar"
         BEGIN
             MENUITEM "Show Title Bar",              40083
@@ -1028,15 +1032,4 @@ END
 #endif    // English (U.S.) resources
 /////////////////////////////////////////////////////////////////////////////
 
-
-
-#ifndef APSTUDIO_INVOKED
-/////////////////////////////////////////////////////////////////////////////
-//
-// Generated from the TEXTINCLUDE 3 resource.
-//
-
-
-/////////////////////////////////////////////////////////////////////////////
-#endif    // not APSTUDIO_INVOKED
 
